--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-kivy==1.11.0
 numpy==1.20.3
 sympy==1.8
 pyserial==3.5
+docutils
+pygments
+pypiwin32
+kivy_deps.gstreamer==0.1.*
+kivy_deps.sdl2==0.1.* 
+kivy_deps.glew==0.1.*
+kivy==1.11.1
